--- a/src/Components/Pages/Pages.css
+++ b/src/Components/Pages/Pages.css
@@ -1,4 +1,4 @@
-/* .landingBackground {
+.pagesBackground{
     height: 100vh;
     width: 100vw;
     background-repeat: no-repeat;
@@ -6,7 +6,6 @@
     background-size: cover;
  background-image: -webkit-image-set(url("/public/Images/background-small.jpg") 1x, url("/public/Images/background-large.jpg") 2x);
     background-image: image-set("/public/Images/background-small.jpg" 1x, "/public/Images/background-large.jpg" 2x); 
-
 
 /* 
     background-image: 
@@ -16,37 +15,10 @@
     background-image:  image-set(    
       url("/public/Images/background-small.jpg") 1x
       url("/public/Images/background-large.jpg") 2x); */
-/* } */ */
+}
 
-.greetingMsg {
-   font-family: 'Open Sans', sans-serif;
-    
+
+.down {
+    cursor: pointer;
+    align-self: center;
   }
-
-  .typeWriter {
-    color: #524127;
-    font-weight: bold;
-    font-family: monospace;
-    border-right: .15em solid black;
-    overflow: hidden; 
-    white-space: nowrap;
-    letter-spacing: .15em;
-    animation: 
-
-    typing 4s steps(20, end) infinite alternate,
-    m 12s steps(3) infinite,
-    blink-caret .75s linear  infinite 
-
-
-  }
-
-@keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
- 
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: rgb(231, 242, 189); }
-  }
-
